# crow

./: .gitignore  ACP_INTEGRATION_STATUS.md  ACP_MINIMAL_PLAN.md  ACP_PROMPTS.md  AGENTS.md  BEVY_ZED_REBUTTAL.md  CANCELLATION_IMPLEMENTATION_SUMMARY.md  CROW_WUZ_HERE.md  Cargo.toml  DIRECTIONS.md  DUAL_AGENT_CLI_PLAN.md  DUAL_AGENT_IMPLEMENTATION_PLAN.md  DUAL_AGENT_PLAN.md  DUAL_AGENT_STORAGE_ANALYSIS.md  DUAL_AGENT_SUBTASK.md  DUAL_AGENT_ZED_PLAN.md  EVALUATION_SUMMARY.md  FACTS.txt  FORKING_ZED.md  FRUSTRATION_STRUGGLE_SESSION.md  GEMINI_ANTIGRAVITY.md  IMPORT_FIX_TASK.md  INSTALLATION.md  ITERATION_1_CRITIQUE_REPORT.md  ITERATION_1_IMPLEMENTATION_SUMMARY.md  ITERATION_2_CRITIQUE_REPORT.md  ITERATION_2_IMPLEMENTATION_SUMMARY.md  ITERATION_2_VERIFICATION_REPORT.md  LONG_TERM_VISION.md  MEMORY.md  NO_YOU.md  OPENCODE_SUBAGENT_SYSTEM.md  PERSISTENCE_BUG.md  PLAN.md  PRIMARY_DUAL_AGENT_PLAN.md  README.md  README_ITERATIVE_REFINEMENT.md  REFACTOR.md  STATUS.md  TELEMETRY_IMPLEMENTATION_PLAN.md  (+18 more)
.github/workflows/: python-publish.yml
crow-backend/: hello.txt  test-event-bus-full.sh  test-event-bus.sh  test-export.sh  test-integration.sh  test-snapshot.sh  test.txt
crow-backend/docs/: A2A_INTEGRATION_PLAN.md  CORE_LOOP_WORKS.md  CRITICAL_GAPS_TODO.md  CROW_API_PARITY.md  CROW_CONFIG_PLAN.md  CROW_CONTEXT_PLAN.md  CROW_EXPLORATION_COMPLETE.txt  CROW_PROGRESS_REPORT.md  CROW_WEB_UI_PROGRESS.md  DIOXUS_WEB_UI_PLAN.md  FIX_SYSTEM_PROMPT.md  IMMEDIATE_NEXT_STEP_CONTEXT_SESSION_TOOL_FIX.md  INITIAL_PLAN.md  MASTER_PLAN.md  MIDWAY_PLAN.md  NEXT_STEPS.md  NEXT_STEPS_DIOXUS_WEB_UI.md  OPENCODE_CROW_COMPARISON.md  OPENCODE_SUBAGENT_TASK_ARCHITECTURE.md  OPENCODE_TUI_ANALYSIS.md  OPENCODE_TUI_CODE_PATTERNS.md  OPENCODE_TUI_EXPLORATION_SUMMARY.md  OPENCODE_TUI_FILE_REFERENCE.md  PROGRESS_REPORT.md  PROJECT_DIRECTORY_SYSTEM.md  README_TUI_EXPLORATION.md  RECOVERY_PLAN.md  ROUNDING_HOME_AGENTS_BACKEND.md  SERVER_ARCHITECTURE.md  SYSTEM_PROMPT_ANALYSIS.md  TICKETS.md  TUI_TO_DIOXUS_MIGRATION_CHECKLIST.md  XDG_CONFIG_COMPLETE.md  event-bus-plan.md  frontend-architecture.md  frontend-kickstart.md  frontend-phases.md  frontend-specs.md
crow-backend/public/: index.html
crow-backend/public/assets/: web-dxhb6b020bb11c4946d.js  web_bg-dxh5b9f266922b86f8.wasm
crow-backend/test-dummy/: test-file.txt
crow-backend/tests/: bash_tool_test.sh
crow-frontend/: e2e-test.sh  index.html  package-lock.json  package.json  test-frontend.sh
crow-frontend/src/: index.css
crow-frontend/src/components/: ChatView.tsx  EditorPane.tsx  SessionList.tsx
crow-frontend/src/hooks/: useEventStream.ts
crow-frontend/src/types/: index.ts
docs/: AGENT_PERMISSIONS_TEST_RESULTS.md  CHECKPOINT_2025-01-31.md  COMPARISON_RESULTS.md  CROW_IDE_vs_VSCODE_ACP_2025-01-31.md  CROW_MONOEXTENSION_STRATEGY_2025-01-31.md  EXPORT_ENHANCEMENT_PLAN.md  MVP_SPECS.md  NEXT_STEPS.md  OPENCODE_PARITY.md  OpenHands-cancellation.md  README_CROW_DOCS.md  SESSION_COMPLETE.md  SHAMELESS_RIPOFF_SUCCESS.md  SYSTEM_PROMPT_PARITY_ACHIEVED.md  UPDATED_GRAND_VISION_CROW_2025-01-31.md  breakthrough_session.md  crow-api-status.md  kimi-acp-analysis.md  priority-endpoints.md
docs/bugs/: 001-tool-responses-not-in-history.md
docs/journal/: 01Feb2026.md  31Jan2026.md  crow-agent-glm-4.7-flash-local.md
docs/misc/: ACP_IMPLEMENTATION_PLAN.md  SETUP_COMPLETE.md  WHITEBOARD_NOTES.md
prompts/: acp_planning_prompt.txt
public/: index.html
public/assets/: hero-dxh3f589ce39e92050.css  main-dxh3521dfe78efddaa3.css  web-dxh6f2b6897dad44e76.js  web-dxhf451417ca91fc812.js  web_bg-dxh6d732c9eb73d2bd9.wasm  web_bg-dxhdc6994a68301260.wasm
scripts/: iterative_refinement.py
scripts/acp/: debug_client.py
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/.crow/sessions/: ses_2oQSGlH8Wvjlnay3dQ7vHp.md
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/src/: lib.rs  main.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  logging.rs
src-tauri/core/src/agent/: builtins.rs  doom_loop.rs  dual.rs  executor.rs  mod.rs  perspective.rs  primary_dual.rs  registry.rs  runtime.rs
src-tauri/core/src/bus/: mod.rs
src-tauri/core/src/config/: types.rs
src-tauri/core/src/lsp/: language.rs  mod.rs
src-tauri/core/src/providers/: client.rs  config.rs  mod.rs
src-tauri/core/src/session/: export.rs  lock.rs  mod.rs  retry.rs  store.rs
src-tauri/core/src/snapshot/: mod.rs
src-tauri/core/src/storage/: crow.rs
src-tauri/core/src/tools/: glob.rs  grep.rs  list.rs  lsp_hover.rs  mod.rs  patch.rs  read.rs  task.rs  task_complete.rs  todoread.rs  todowrite.rs  webfetch.rs  websearch.rs  work_completed.rs  write.rs
src-tauri/core/tests/: e2e_task.sh
src-tauri/core/tests/e2e/: TEST_AGENTS.md  test_crow_e2e.sh
src-tauri/core/tests/e2e/tests/: 01_session.sh  02_bash.sh  03_write.sh  04_read.sh  05_edit.sh  06_grep.sh  07_glob.sh  08_list.sh  09_workflow.sh  10_errors.sh  11_task.sh  12_dual_agent.sh  README.md
src/components/: ChatView.tsx  EditorPane.tsx  FileTree.tsx  Terminal.tsx
src/crow/: __init__.py
src/crow/acp/: README.md  __init__.py  server.py
src/crow/agent/: README.md  __init__.py  __main__.py  acp_server.py  cli.py  config.py  display_blocks.py  enhanced_observation.py
src/crow/cli/: __init__.py  main.py
src/crow/editor/: server.py
src/hooks/: useEventStream.ts
src/pages/: SessionListPage.tsx  SessionWorkspacePage.tsx
test-dummy/: test-file.txt  test-file.txt.backup
tests/: edit_tool_direct_test.sh  edit_tool_test.sh  test_acp_agent.py  test_acp_cancellation.py  test_acp_client.py  test_acp_debug.py  test_acp_server.py  test_acp_simple.py
