[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
uuid = { version = "1.0", features = ["js"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
