[project]
name = "crow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol",
    "ipython>=9.9.0",
    "openai>=2.14.0",
    "openhands-sdk",
    "openhands-tools",
    "python-dotenv>=1.2.1",
]

[project.scripts]
crow-acp = "crow.agent.acp_server:sync_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crow"]

[tool.uv.sources]
openhands-sdk = { path = "../software-agent-sdk/openhands-sdk", editable = true }
openhands-tools = { path = "../software-agent-sdk/openhands-tools", editable = true }
agent-client-protocol = { path = "../acp-python-sdk" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
