[project]
name = "crow-ai"
version = "0.2.2"
description = "AI agent toolkit with ACP server and web IDE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol",
    "aiofiles>=25.1.0",
    "ipython>=9.9.0",
    "markdownify>=1.2.2",
    "openai>=2.14.0",
    "openhands-sdk",
    "openhands-tools",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.5",
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
    "websockets>=14.0",
]

[project.scripts]
crow = "crow.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crow"]

[tool.hatch.build.targets.wheel.force-include]
"src/crow/editor/frontend/dist" = "crow/editor/frontend/dist"

[tool.hatch.build.targets.sdist.force-include]
"src/crow/editor/frontend/dist" = "src/crow/editor/frontend/dist"

[tool.uv.sources]
openhands-sdk = { path = "../software-agent-sdk/openhands-sdk", editable = true }
openhands-tools = { path = "../software-agent-sdk/openhands-tools", editable = true }
agent-client-protocol = { path = "../acp-python-sdk" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
