[workspace]
resolver = "2"
members = ["app", "core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thomas"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# LLM provider
async-openai = "0.28"

# HTTP client (for external APIs like web search)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5"
regex = "1"
similar = { version = "2.0", features = ["text", "inline"] }
which = "8.0.0"
dotenvy = "0.15"

# Streaming
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
async-stream = "0.3"

# Concurrency
parking_lot = "0.12"
once_cell = "1.21"
lazy_static = "1.4"

# Config
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
nix = { version = "0.29", features = ["signal"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-build = { version = "2", features = [] }

# Internal
crow_core = { path = "core" }
