[package]
name = "crow"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "crow_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Core logic
crow_core.workspace = true

# Utilities
uuid.workspace = true
